tests/typing/fail/alias_method_method_fail.rb

class A
  def x() end
  alias_method :y, :x
end

a = A.new
a.y(2)

